--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,5 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.login=etentho
-sonar.password=Password1!
+sonar.login=admin
+sonar.password=admin
